<resources>
    <string name="app_name">bbest-SizeBook</string>
    <string name="add">+Add</string>
    <string name="current_records">Current Records:</string>
    <string name="bbest_sizebook">bbest Sizebook</string>
    <string name="name">Name</string>
    <string name="add_record">Add Record</string>
    <string name="asterisk">*</string>
    <string name="bust_size">Bust Size</string>
    <string name="chest_size">Chest Size</string>
    <string name="hip_size">Hip Size</string>
    <string name="neck_size">Neck Size</string>
    <string name="inseam_length">Inseam Length</string>
    <string name="submit">Submit</string>
    <string name="waist_size">Waist Size</string>
    <string name="edit_chest_size">Chest Size:</string>
    <string name="edit_person">Edit Person</string>
    <string name="edit_name">Name:</string>
    <string name="edit_neck_size">Neck Size:</string>
    <string name="comments">Comments</string>
    <string name="edit_bust_size">Bust Size:</string>
    <string name="edit_comments">Comments:</string>
    <string name="edit">Edit</string>
    <string name="edit_hip_size">Hip Size:</string>
    <string name="edit_inseam_length">Inseam Length</string>
    <string name="edit_waist_size">Waist Size:</string>
    <string name="records_count">00</string>
    <string name="edit_person_text">Edit Person</string>
    <string name="yyyy_mm_dd">yyyy-mm-dd</string>
    <string name="datestring">yyyy.mm.dd</string>
    <string name="date">Date:</string>


</resources>
