<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_records__list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.bbest.bbest_sizebook.Records_List"
    android:background="@color/colorPrimary"
    android:fadeScrollbars="true">

    <TextView
        android:text="@string/current_records"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bbest_SizebookTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="13dp"
        android:id="@+id/CurrentRecordsTextView"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        tools:ignore="RtlHardcoded" />

    <ExpandableListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/AddRecordButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@android:color/white"
        android:headerDividersEnabled="true"
        android:footerDividersEnabled="true"
        android:fadeScrollbars="true"
        android:nestedScrollingEnabled="true"
        tools:ignore="RtlHardcoded" />

    <Button
        android:text="@string/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/AddRecordButton"
        android:background="@android:color/transparent"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:layout_below="@+id/bbest_SizebookTextView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        tools:ignore="RtlHardcoded"
        android:onClick="addPerson"
        android:textColor="@android:color/white" />

    <TextView
        android:text="@string/bbest_sizebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bbest_SizebookTextView"
        android:textSize="24sp"
        android:textStyle="normal|bold"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@android:color/white"
        tools:ignore="RtlHardcoded"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
