<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_person"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.bbest.bbest_sizebook.EditPersonActivity">

    <TextView
        android:text="@string/edit_person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="127dp"
        android:id="@+id/EditPersonTitleView"
        android:fontFamily="sans-serif-condensed"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="normal|bold" />

    <TextView
        android:text="@string/edit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:id="@+id/EditNameTextView"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@android:color/black"
        android:layout_below="@+id/EditPersonTitleView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="36dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/EditPersonTitleView"
        android:layout_toEndOf="@+id/EditNameTextView"
        android:layout_marginTop="13dp"
        android:id="@+id/EditNameTextEntry"
        android:fontFamily="sans-serif-condensed" />

    <EditText
        android:layout_width="85sp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/EditChestEntryView"
        android:layout_alignBaseline="@+id/EditChestTextView"
        android:layout_alignBottom="@+id/EditChestTextView"
        android:layout_toEndOf="@+id/EditChestTextView"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@android:color/black"
        android:background="@android:drawable/editbox_background" />

    <TextView
        android:text="@string/edit_neck_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/EditNeckSizeTextView"
        android:textColor="@android:color/black"
        android:fontFamily="sans-serif-condensed"
        android:layout_below="@+id/EditNameTextEntry"
        android:layout_toStartOf="@+id/EditNameTextEntry"
        android:layout_marginTop="13dp" />

    <EditText
        android:layout_width="85sp"
        android:layout_height="wrap_content"
        android:inputType=""
        android:ems="10"
        android:id="@+id/EditNeckSizeEntryView"
        android:fontFamily="sans-serif-condensed"
        android:layout_below="@+id/EditNameTextEntry"
        android:layout_toEndOf="@+id/EditNeckSizeTextView"
        android:background="@android:drawable/editbox_background" />

    <TextView
        android:text="@string/edit_chest_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/EditChestTextView"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@android:color/black"
        android:layout_alignBaseline="@+id/EditNeckSizeEntryView"
        android:layout_alignBottom="@+id/EditNeckSizeEntryView"
        android:layout_toEndOf="@+id/EditNeckSizeEntryView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/EditWaistEntryView"
        android:layout_below="@+id/EditNeckSizeEntryView"
        android:layout_toEndOf="@+id/EditNeckSizeEntryView"
        android:fontFamily="sans-serif-condensed"
        android:text="Waist Size:"
        android:textColor="@android:color/black" />

    <EditText
        android:layout_width="85sp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName|numberDecimal"
        android:ems="10"
        android:id="@+id/EditBustEntryView"
        android:background="@android:drawable/editbox_background"
        android:layout_alignBottom="@+id/EditWaistEntryView"
        android:layout_toEndOf="@+id/EditBustTextView" />

    <TextView
        android:text="Bust Size:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/EditBustTextView"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@android:color/black"
        android:layout_alignBaseline="@+id/EditBustEntryView"
        android:layout_alignBottom="@+id/EditBustEntryView"
        android:layout_alignStart="@+id/EditNeckSizeTextView" />

    <EditText
        android:layout_width="85sp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/EditWaistEntryView"
        android:fontFamily="sans-serif-condensed"
        android:background="@android:drawable/editbox_background"
        android:layout_below="@+id/EditNeckSizeTextView"
        android:layout_alignStart="@+id/EditChestEntryView" />
</RelativeLayout>
